# -*- Makefile -*-
#
# Copyright (c)      2022  Sandia Corporation
#

html_MANS = \
                qalloc_checkpoint.html \
                qalloc_cleanup.html \
                qalloc_dynfree.html \
                qalloc_dynmalloc.html \
                qalloc_free.html \
                qalloc_loadmap.html \
                qalloc_makedynmap.html \
                qalloc_makestatmap.html \
                qalloc_malloc.html \
                qalloc_statfree.html \
                qalloc_statmalloc.html \
                qarray_create_configured.html \
                qarray_create.html \
                qarray_create_tight.html \
                qarray_destroy.html \
                qarray_dist_like.html \
                qarray_elem.html \
                qarray_elem_migrate.html \
                qarray_elem_nomigrate.html \
                qarray_iter_constloop.html \
                qarray_iter.html \
                qarray_iter_loopaccum.html \
                qarray_iter_loop.html \
                qarray_iter_loop_nb.html \
                qarray_set_shepof.html \
                qarray_shepof.html \
                qdqueue_create.html \
                qdqueue_dequeue.html \
                qdqueue_destroy.html \
                qdqueue_empty.html \
                qdqueue_enqueue.html \
                qdqueue_enqueue_there.html \
                qlfqueue_create.html \
                qlfqueue_dequeue.html \
                qlfqueue_destroy.html \
                qlfqueue_empty.html \
                qlfqueue_enqueue.html \
                qpool_alloc.html \
                qpool_create_aligned.html \
                qpool_create.html \
                qpool_destroy.html \
                qpool_free.html \
                qt_accept.html \
                qt_allpairs.html \
                qt_begin_blocking_action.html \
                qt_connect.html \
                qt_dictionary_create.html \
                qt_dictionary_delete.html \
                qt_dictionary_destroy.html \
                qt_dictionary_end.html \
                qt_dictionary_get.html \
                qt_dictionary_iterator_copy.html \
                qt_dictionary_iterator_create.html \
                qt_dictionary_iterator_destroy.html \
                qt_dictionary_iterator_equals.html \
                qt_dictionary_iterator_get.html \
                qt_dictionary_iterator_next.html \
                qt_dictionary_put.html \
                qt_dictionary_put_if_absent.html \
                qt_double_max.html \
                qt_double_min.html \
                qt_double_prod.html \
                qt_double_sum.html \
                qt_end_blocking_action.html \
                qthread_cacheline.html \
                qthread_cas.html \
                qthread_cas_ptr.html \
                qthread_debuglevel.html \
                qthread_dincr.html \
                qthread_disable_shepherd.html \
                qthread_disable_worker.html \
                qthread_distance.html \
                qthread_empty.html \
                qthread_enable_shepherd.html \
                qthread_enable_worker.html \
                qthread_feb_barrier_create.html \
                qthread_feb_barrier_destroy.html \
                qthread_feb_barrier_enter.html \
                qthread_feb_barrier_resize.html \
                qthread_feb_status.html \
                qthread_fill.html \
                qthread_finalize.html \
                qthread_fincr.html \
                qthread_fork.html \
                qthread_fork_precond.html \
                qthread_fork_precond_to.html \
                qthread_fork_syncvar.html \
                qthread_fork_syncvar_to.html \
                qthread_fork_to.html \
                qthread_get_tasklocal.html \
                qthread_id.html \
                qthread_incr.html \
                qthread_init.html \
                qthread_initialize.html \
                qthread_lock.html \
                qthread_migrate_to.html \
                qthread_num_shepherds.html \
                qthread_num_workers.html \
                qthread_queue_create.html \
                qthread_queue_destroy.html \
                qthread_queue_join.html \
                qthread_queue_length.html \
                qthread_queue_release_all.html \
                qthread_queue_release_one.html \
                qthread_readFE.html \
                qthread_readFF.html \
                qthread_readstate.html \
                qthread_retloc.html \
                qthread_shep.html \
                qthread_shep_ok.html \
                qthread_size_tasklocal.html \
                qthread_sorted_sheps.html \
                qthread_sorted_sheps_remote.html \
                qthread_spawn.html \
                qthread_stackleft.html \
                qthread_syncvar_empty.html \
                qthread_syncvar_fill.html \
                qthread_syncvar_readFE.html \
                qthread_syncvar_readFF.html \
                qthread_syncvar_status.html \
                qthread_syncvar_writeEF_const.html \
                qthread_syncvar_writeEF.html \
                qthread_syncvar_writeF_const.html \
                qthread_syncvar_writeF.html \
                qthread_unlock.html \
                qthread_worker.html \
                qthread_worker_unique.html \
                qthread_writeEF_const.html \
                qthread_writeEF.html \
                qthread_writeF_const.html \
                qthread_writeF.html \
                qthread_yield.html \
                qtimer_create.html \
                qtimer_destroy.html \
                qtimer_fastrand.html \
                qtimer_secs.html \
                qtimer_start.html \
                qtimer_stop.html \
                qt_int_max.html \
                qt_int_min.html \
                qt_int_prod.html \
                qt_int_sum.html \
                qt_loopaccum_balance.html \
                qt_loop_balance.html \
                qt_loop_balance_simple.html \
                qt_loop.html \
                qt_loop_queue_addworker.html \
                qt_loop_queue_create.html \
                qt_loop_queue_run.html \
                qt_loop_queue_run_there.html \
                qt_loop_queue_setchunk.html \
                qt_loop_step.html \
                qt_poll.html \
                qt_pread.html \
                qt_pwrite.html \
                qt_read.html \
                qt_select.html \
                qt_sinc_create.html \
                qt_sinc_destroy.html \
                qt_sinc_expect.html \
                qt_sinc_fini.html \
                qt_sinc_init.html \
                qt_sinc_reset.html \
                qt_sinc_submit.html \
                qt_sinc_wait.html \
                qt_system.html \
                qt_team_critical_section.html \
                qt_team_eureka.html \
                qt_team_id.html \
                qt_team_parent_id.html \
                qt_uint_max.html \
                qt_uint_min.html \
                qt_uint_prod.html \
                qt_uint_sum.html \
                qt_wait4.html \
                qt_write.html \
                qutil_double_max.html \
                qutil_double_min.html \
                qutil_double_mult.html \
                qutil_double_sum.html \
                qutil_int_max.html \
                qutil_int_min.html \
                qutil_int_mult.html \
                qutil_int_sum.html \
                qutil_mergesort.html \
                qutil_qsort.html \
                qutil_uint_max.html \
                qutil_uint_min.html \
                qutil_uint_mult.html \
                qutil_uint_sum.html
EXTRA_DIST = $(html_MANS)
