# -*- Makefile -*-
#
# Copyright (c)      2008  Sandia Corporation
#

man_MANS = qthread_empty.3 \
		   qthread_feb_status.3 \
		   qthread_fill.3 \
		   qthread_finalize.3 \
		   qthread_fork.3 \
		   qthread_fork_to.3 \
		   qthread_id.3 \
		   qthread_incr.3 \
		   qthread_dincr.3 \
		   qthread_distance.3 \
		   qthread_fincr.3 \
		   qthread_init.3 \
		   qthread_lock.3 \
		   qthread_num_shepherds.3 \
		   qthread_migrate_to.3 \
		   qthread_prepare.3 \
		   qthread_prepare_for.3 \
		   qthread_retloc.3 \
		   qthread_readFE.3 \
		   qthread_readFF.3 \
		   qthread_schedule.3 \
		   qthread_schedule_on.3 \
		   qthread_self.3 \
		   qthread_shep.3 \
		   qthread_sorted_sheps.3 \
		   qthread_sorted_sheps_remote.3 \
		   qthread_stackleft.3 \
		   qthread_unlock.3 \
		   qthread_writeEF.3 \
		   qthread_writeEF_const.3 \
		   qthread_writeF.3 \
		   qthread_writeF_const.3 \
		   qthread_yield.3 \
		   qalloc_checkpoint.3 \
		   qalloc_cleanup.3 \
		   qalloc_dynfree.3 \
		   qalloc_dynmalloc.3 \
		   qalloc_free.3 \
		   qalloc_loadmap.3 \
		   qalloc_makedynmap.3 \
		   qalloc_makestatmap.3 \
		   qalloc_malloc.3 \
		   qalloc_statfree.3 \
		   qalloc_statmalloc.3 \
		   qutil_double_sum.3 \
		   qutil_double_mult.3 \
		   qutil_double_max.3 \
		   qutil_double_min.3 \
		   qutil_uint_sum.3 \
		   qutil_uint_mult.3 \
		   qutil_uint_max.3 \
		   qutil_uint_min.3 \
		   qutil_int_sum.3 \
		   qutil_int_mult.3 \
		   qutil_int_max.3 \
		   qutil_int_min.3 \
		   qutil_qsort.3 \
		   qutil_mergesort.3 \
		   qt_double_max.3 \
		   qt_double_min.3 \
		   qt_double_prod.3 \
		   qt_double_sum.3 \
		   qt_int_max.3 \
		   qt_int_min.3 \
		   qt_int_prod.3 \
		   qt_int_sum.3 \
		   qt_uint_max.3 \
		   qt_uint_min.3 \
		   qt_uint_prod.3 \
		   qt_uint_sum.3 \
		   qt_loop.3 \
		   qt_loop_future.3 \
		   qt_loop_balance.3 \
		   qt_loop_balance_future.3 \
		   qt_loopaccum_balance.3 \
		   qt_loopaccum_balance_future.3 \
		   future_acquire.3 \
		   future_fork.3 \
		   future_exit.3 \
		   future_init.3 \
		   future_join_all.3 \
		   future_yield.3
EXTRA_DIST = $(man_MANS)
